--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/vision": "^0.6.0",
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0"
+    "@google-cloud/vision": "^0.11.3"
   }
 }
