--- a/Resizer/package.json
+++ b/Resizer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uploader",
+  "name": "resizer",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,7 +12,6 @@
     "aws-sdk": "^2.88.0"
   },
   "dependencies": {
-    "sharp": "^0.18.2",
-    "uuid": "^3.1.0"
+    "sharp": "^0.18.2"
   }
 }
