--- a/Translate/package.json
+++ b/Translate/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uploader",
+  "name": "translate",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,11 +8,7 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "aws-sdk": "^2.88.0"
-  },
   "dependencies": {
-    "sharp": "^0.18.2",
-    "uuid": "^3.1.0"
+    "@google-cloud/translate": "^1.0.0"
   }
 }
