--- a/vision/package.json
+++ b/vision/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "visionTest.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "zip": "rm lambda.zip && zip -r lambda.zip ."
   },
   "author": "",
   "license": "ISC",
